# parse_eda_ru

./: .gitignore  README.md  entrypoint.sh  pyproject.toml
other/: check_urls.py  create_ids.py  lower_mongo.py
src/: __main__.py
src/parse_recipes/: handler.py  parse_data.py  parse_urls.py  utils.py
